--- a/src/helpers.less
+++ b/src/helpers.less
@@ -212,3 +212,9 @@ img {
 		vertical-align: middle;
 	}
 }
+
+@-webkit-keyframes chrome-overflow-hack {
+	to {
+		margin-left: 0%;
+	}
+}
