--- a/src/mixins.less
+++ b/src/mixins.less
@@ -78,3 +78,9 @@
 		white-space: ~"normal\9";
 	}
 }
+
+.make-overflow(){
+	overflow: auto;
+	-webkit-animation-name: chrome-overflow-hack;
+	-webkit-animation-duration: 9999s;
+}
